# nlp-project

./: .gitignore  app.py  evaluator.py  pyproject.toml  rag_core.py  requirements.txt
